--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "/",
   "dependencies": {
     "gh-pages": "^3.1.0",
+    "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "^3.4.1"
