--- a/package.json
+++ b/package.json
@@ -27,7 +27,11 @@
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-json-view": "^1.19.1",
     "react-scripts": "^3.4.1"
+  },
+   "eslintConfig": {
+    "extends": "react-app"
   },
   "browserslist": {
     "production": [
