--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,7 +10,7 @@
   "globals": {
     "fail": true
   },
-  "extends": "eslint:recommended",
+  "extends": "react-app",
   "parser": "babel-eslint",
   "parserOptions": {
     "sourceType": "module",
