--- a/package.json
+++ b/package.json
@@ -28,9 +28,10 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-json-view": "^1.19.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.1"
   },
-   "eslintConfig": {
+  "eslintConfig": {
     "extends": "react-app"
   },
   "browserslist": {
